# boardwatch

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.agent/: ralph.sh
.github/workflows/: ci.yml  registry-health.yml
docs/: README.md  configuration.md
docs/registry/: seed-verification.md
src/boardwatch/cli/: app.py  companies_cmd.py  config_cmd.py  context.py  doctor_cmd.py  init_cmd.py  profile_cmd.py  scan_cmd.py  show_cmd.py  top_cmd.py
src/boardwatch/core/: board_urls.py  clock.py  html_text.py  identity.py  models.py  normalize.py  politeness.py  settings.py
src/boardwatch/extract/: preflight.py  role_family.py  taxonomy.py  taxonomy.yaml
tests/contract/: _ashby_huge_probe.py  test_ashby.py  test_greenhouse.py  test_lever.py
tests/perf/: test_top_perf.py
tests/pipeline/: conftest.py  gh_fixtures.py  provider_cases.py  test_e2e.py  test_scan.py  test_scan_lock.py  test_state_model.py  test_taxonomy_edit.py  test_top_show.py
tests/unit/: test_board_urls.py  test_clock.py  test_companies_cmd.py  test_config_cmd.py  test_doctor.py  test_health_report.py  test_html_text.py  test_identity.py  test_import_hygiene.py  test_init_paths.py  test_init_profile.py  test_migration_last_health.py  test_models.py  test_normalize.py  test_politeness.py  test_preflight.py  test_queries.py  test_ranking.py  test_registry.py  test_role_family.py  test_settings.py  test_store.py  test_taxonomy.py  test_taxonomy_caveats.py  test_version.py
(+36 files in other folders)
