[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boardwatch"
version = "0.1.0.dev0"
description = "Self-hosted job radar over official ATS APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "platformdirs>=4.2",
    "selectolax>=0.3.21",
    "rapidfuzz>=3.9",
    "tenacity>=8.3",
    "filelock>=3.13",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.scripts]
boardwatch = "boardwatch.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/boardwatch/store/migrations/**" = ["E501"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "boardwatch.store.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "selectolax.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not perf' --cov=boardwatch --cov-fail-under=85"
markers = ["perf: performance smoke tests (dedicated CI job, excluded by default)"]

[tool.coverage.run]
branch = true
